Added spatial sound, optimised mechanic code, new emitter material,changed wall materials

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1AE8DC574F1055E584DECA8C153EBF76
 ProjectName=First Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BlueprintNativizationMethod=Inclusive
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+
