--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,8 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+SpatializationPlugin=Built-in Spatialization
+ReverbPlugin=Built-in Reverb
+OcclusionPlugin=Built-in Occlusion
+
